--- a/es6ForStock/package.json
+++ b/es6ForStock/package.json
@@ -7,5 +7,32 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "zhushunli",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.17.2",
+    "connect-livereload": "^0.6.0",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-live-server": "^0.0.31",
+    "gulp-livereload": "^3.8.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sequence": "^0.4.6",
+    "gulp-util": "^3.0.8",
+    "mini-lr": "^0.1.9",
+    "require-dir": "^0.3.2",
+    "vinyl-named": "^1.1.0",
+    "webpack": "^3.5.1",
+    "webpack-stream": "^4.0.0",
+    "yargs": "^8.0.2"
+  },
+  "dependencies": {
+    "gulp-uglify": "^3.0.0"
+  }
 }
