--- a/es6ForStock/package.json
+++ b/es6ForStock/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
@@ -33,6 +34,7 @@
     "yargs": "^8.0.2"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "gulp-uglify": "^3.0.0"
   }
 }
