--- a/es6ForStockReal/package.json
+++ b/es6ForStockReal/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -31,5 +32,8 @@
     "webpack": "^3.5.5",
     "webpack-stream": "^4.0.0",
     "yargs": "^8.0.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
