--- a/es6ForStockReal/server/package.json
+++ b/es6ForStockReal/server/package.json
@@ -13,5 +13,8 @@
     "express": "~4.13.4",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "mockjs": "^1.0.1-beta3"
   }
 }
